--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,13 +17,12 @@ stages:
   jobs:  
   - job: Build
     displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
+    pool: RealDevOps
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'Binarythistle Docker Hub'
-        repository: 'binarythistle/weatherapi'
+        containerRegistry: 'OngoingADO'
+        repository: 'aiwa23/weatherapi'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: |
@@ -34,8 +33,7 @@ stages:
   jobs:
   - job: Provision
     displayName: 'Provisioning Container Instance'
-    pool:
-      vmImage: 'ubuntu-latest'
+    pool: RealDevOps
     variables: 
     - group: TeraformEnvVars
     steps:
