Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ stages:
     steps:
     - task: Docker@2
       inputs:
-        containerRegistry: 'OngoingADO'
+        containerRegistry: 'TerraformARM'
         repository: 'aiwa23/weatherapi'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
